# frontd

./: Cargo.toml  README.md
docs/: proto.md
handler/: Cargo.toml  build.rs
handler/examples/: rerank_client.rs
handler/src/: proto.rs
handler/src/service/: rerank.rs
inference/: Cargo.toml
inference/src/: lib.rs  rerank.rs
model_repository/: README.md
model_repository/BAAI/bge-m3/: .gitignore
proto/core/v1/: meta.proto
proto/rerank/v1/: rerank.proto
