[package]
name = "handler"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rerank"

[[example]]
name = "rerank_client"

[dependencies]
prost = "0.13.5"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.13.0"
tonic-reflection = "0.13.0"

[build-dependencies]
tonic-build = "0.13.0"
